--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-family: var(--ff);
 }
 
-input. textarea, button {
+input, textarea, button {
     font: inherit;
 }
 
@@ -47,6 +47,15 @@ h1 {
 
 h2 {
     font-size: var(--fs-secondary-heading);
+}
+
+
+/* Actual styles */
+.hero__section {
+    background-image: url(./images/@Gradient.png);
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
 
 
