--- a/style.css
+++ b/style.css
@@ -51,11 +51,35 @@ h2 {
 
 
 /* Actual styles */
+header {
+    position: fixed;
+}
+
+.header__nav {
+    width: min(1200px, 90%);
+    margin-inline: auto;
+}
+
+nav {
+    display: flex;
+}
+
+nav img {
+    width: 50%;
+}
+
 .hero__section {
     background-image: url(./images/@Gradient.png);
     background-size: cover;
-    height: 100vh;
-    width: 100%;
+    padding-block: 20rem;
+
+    display: flex; 
+    align-items: center;
+    flex-direction: column;
+
+    color: var(--neutral-1);
+
+
 }
 
 
