html header nav

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,6 +8,45 @@
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Homepage</h1>
+    <header>
+        <div>
+            <nav>
+
+                <figure>
+                    <img src="./images/#screencontent.png" alt="">
+                </figure>
+
+                <div>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Product</a></li>
+                        <li><a href="">Pricing</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+
+                </div>
+
+                <div>
+                    <input type="email" name="email" id="" placeholder="Your email">
+                    <button>Subscribe</button>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <div>
+                <h1>Lightning fast prototyping </h1>
+                <p>Most calendars are designed for teams. Slate is designed 
+                    for freelancers</p>
+                    <button>Try For Free</button>
+
+                <figure>
+                    <img src="../images/#screencontent.png" alt="">
+                </figure>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
