--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/main.css">
+    <link rel="stylesheet" href="/main.css">
     <title>Homepage</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <nav>
 
                 <figure>
-                    <img src="./images/#screencontent.png" alt="">
+                    <img src="./images/logo white.png" alt="">
                 </figure>
 
                 <div>
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="hero__section container">
             <div>
                 <h1>Lightning fast prototyping </h1>
                 <p>Most calendars are designed for teams. Slate is designed 
