fixed image rendering ejs

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,7 @@
             <nav>
 
                 <figure>
-                    <img src="./images/logo white.png" alt="">
+                    <img src="/logo white.png" alt="">
                 </figure>
 
                 <div>
@@ -43,7 +43,7 @@
                     <button>Try For Free</button>
 
                 <figure>
-                    <img src="../images/#screencontent.png" alt="">
+                    <img src="/screencontent.png" alt="">
                 </figure>
             </div>
         </section>
