--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,12 @@ html {
     scroll-behavior: smooth;
 }
 
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
 button, textarea, input {
     font: inherit;
 }
