--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -35,8 +35,8 @@
     </header>
 
     <main>
-        <section class="hero__section container">
-            <div>
+        <section class="hero__section">
+            <div class="hero__content">
                 <h1>Lightning fast prototyping </h1>
                 <p>Most calendars are designed for teams. Slate is designed 
                     for freelancers</p>
