--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -17,7 +17,7 @@
                 </figure>
 
                 <div>
-                    <ul>
+                    <ul class="nav__menu">
                         <li><a href="">Home</a></li>
                         <li><a href="">Product</a></li>
                         <li><a href="">Pricing</a></li>
