--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -40,7 +40,7 @@
                 <h1>Lightning fast prototyping </h1>
                 <p>Most calendars are designed for teams. Slate is designed 
                     for freelancers</p>
-                    <button>Try For Free</button>
+                    <button class="primary-button">Try For Free</button>
 
                 <figure>
                     <img src="/screencontent.png" alt="">
