--- a/public/main.css
+++ b/public/main.css
@@ -53,6 +53,13 @@ p {
     font-size: var(--fs-paragraph);
 }
 
+.primary-button { 
+    width: 236px;
+    padding: 1rem 1.5rem;
+    border: none;
+    border-radius: 10px;
+}
+
 
 /* styles */
 header {
