adjust hero section

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -28,7 +28,7 @@
 
                 <div>
                     <input type="email" name="email" id="" placeholder="Your email">
-                    <button>Subscribe</button>
+                    <button class="primary-button">Subscribe</button>
                 </div>
             </nav>
         </div>
