--- a/public/main.css
+++ b/public/main.css
@@ -89,12 +89,13 @@ nav figure {
 }
 
 .nav__menu li {
-    list-style: none;
-    
+    list-style: none;    
 }
 
 .nav__menu li a {
     text-decoration: none;
+    color: var(--neutral1);
+
 }
 
 .hero__section {
@@ -114,4 +115,8 @@ nav figure {
 
 .hero__content {
     width: min(1200px, 70%);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
 }
