--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,5 @@
     <%- include("./includes/header") %>
-    
+
     <main>
         <section class="hero__section">
             <div class="hero__content">
@@ -12,6 +12,17 @@
                     <img src="/screencontent.png" alt="">
                 </figure>
             </div>
+        </section>
+
+
+        <section class="container">
+
+            <div class="center-div">
+                <h2 class="secondary-color">AMAZING FEATURES</h2>
+                <p>Most calendars are designed for teams. 
+                   <br> Slate is designed for freelancers</p>
+            </div>
+
         </section>
     </main>
 </body>
