--- a/public/main.css
+++ b/public/main.css
@@ -49,8 +49,29 @@ h1 {
     font-weight: 900;
 }
 
+h2 {
+    font-size: var(--fs-secondary-heading);
+}
+
 p {
     font-size: var(--fs-paragraph);
+}
+
+.primary-color {
+    color: var(--primary-color);
+}
+
+.secondary-color {
+    color: var(--primary-color);
+}
+
+.neutral1 {
+    color: var(--neutral1);
+}
+
+
+.neutral2 {
+    color: var(--neutral2);
 }
 
 .primary-button { 
@@ -65,6 +86,14 @@ input {
     padding: 1rem 1.5rem;
     border: none;
     border-radius: 10px;
+}
+
+.center-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    text-align: center;
 }
 
 
@@ -113,6 +142,7 @@ nav figure {
     background-size: cover;
     
     padding-top: 16rem;
+    padding-bottom: 6rem;
     color: var(--neutral1);
     text-align: center;
 
@@ -128,4 +158,13 @@ nav figure {
     flex-direction: column;
     gap: 2rem;
     align-items: center;
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 70em) {
+    .container {
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
 }
