--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,7 +19,7 @@
 
             <div class="center-div">
                 <h2 class="secondary-color">AMAZING FEATURES</h2>
-                <p>Most calendars are designed for teams. 
+                <p class="neutral2">Most calendars are designed for teams. 
                    <br> Slate is designed for freelancers</p>
             </div>
 
