--- a/public/main.css
+++ b/public/main.css
@@ -27,9 +27,10 @@ button, textarea, input {
 :root {
     --ff: 'Montserrat', sans-serif;
 
-    --fs-primary-heading: clamp(3rem, 5vw, 5rem);
-    --fs-secondary-heading: clamp(2rem, 3vw, 3rem);
+    --fs-primary-heading: clamp(4rem, 5vw, 5rem);
+    --fs-secondary-heading: clamp(3rem, 4vw, 4rem);
     --fs-paragraph: clamp(2rem, 2vw, 2rem);
+    --fs-paragraph2: clamp(.6rem, 1vw, 1rem);
 
     --primary-color: #2091F9;
     --secondary-color: #252B42;
@@ -39,7 +40,7 @@ button, textarea, input {
 
 /* utility classes */
 .container {
-    width: min(1200px, 70%);
+    width: min(1400px, 90%);
     display: grid;
     margin-inline: auto;
     padding: 4rem;
@@ -52,10 +53,17 @@ h1 {
 
 h2 {
     font-size: var(--fs-secondary-heading);
+    font-weight: 200;
 }
 
-p {
+h3 {
     font-size: var(--fs-paragraph);
+    font-weight: 100;
+
+}
+
+h4 {
+    font-size: var(--fs-paragraph2);
 }
 
 .primary-color {
@@ -142,7 +150,7 @@ nav figure {
     background-repeat: no-repeat;
     background-size: cover;
     
-    padding-top: 16rem;
+    padding-top: 14rem;
     padding-bottom: 6rem;
     color: var(--neutral1);
     text-align: center;
@@ -159,6 +167,29 @@ nav figure {
     flex-direction: column;
     gap: 2rem;
     align-items: center;
+}
+
+.card__container {
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    flex-wrap: wrap;
+}
+
+.feat__card {
+    width: 344px;
+    padding: 2rem;
+    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--neutral2);
+    border-radius: 10px;
+    box-shadow: #737373;
+}
+
+.feat__card figure {
+    width: 20%;
 }
 
 /* MEDIA QUERIES */
