--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,8 +4,8 @@
         <section class="hero__section">
             <div class="hero__content">
                 <h1>Lightning fast prototyping </h1>
-                <p>Most calendars are designed for teams. Slate is designed 
-                    for freelancers</p>
+                <h3>Most calendars are designed for teams. Slate is designed 
+                    for freelancers</h3>
                     <button class="primary-button">Try For Free</button>
 
                 <figure>
@@ -19,10 +19,67 @@
 
             <div class="center-div">
                 <h2 class="secondary-color">AMAZING FEATURES</h2>
-                <p class="neutral2">Most calendars are designed for teams. 
-                   <br> Slate is designed for freelancers</p>
+                <h3 class="neutral2">Most calendars are designed for teams. 
+                   <br> Slate is designed for freelancers</h3>
             </div>
 
+        </section>
+
+
+        <section class="container">
+
+            <div class="card__container">
+                <div class="feat__card">
+                    <figure>
+                        <img src="/Vectoricons.png" alt="">
+                    </figure>
+    
+                    <h3>Gorgeous design
+                    </h3>
+    
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your
+                         financial goal </p>
+    
+                    <a href="#">Learn more</a>
+                </div>
+
+
+                <div class="feat__card">
+                    <figure>
+                        <img src="/Vectoricons.png" alt="">
+                    </figure>
+    
+                    <h3>Gorgeous design
+                    </h3>
+    
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your
+                         financial goal </p>
+    
+                    <a href="#">Learn more</a>
+                </div>
+
+
+                <div class="feat__card">
+                    <figure>
+                        <img src="/Vectoricons.png" alt="">
+                    </figure>
+    
+                    <h3>Gorgeous design
+                    </h3>
+    
+                    <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your
+                         financial goal </p>
+    
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+            
         </section>
     </main>
 </body>
