added blur effect

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -48,10 +48,10 @@
 
                 <div class="feat__card">
                     <figure>
-                        <img src="/Vectoricons.png" alt="">
+                        <img src="/Vectoricons-1.png" alt="">
                     </figure>
     
-                    <h3>Gorgeous design
+                    <h3>Performance
                     </h3>
     
                     <p>Slate helps you see how 
@@ -65,10 +65,10 @@
 
                 <div class="feat__card">
                     <figure>
-                        <img src="/Vectoricons.png" alt="">
+                        <img src="/Vectoricons-2.png" alt="">
                     </figure>
     
-                    <h3>Gorgeous design
+                    <h3>Content
                     </h3>
     
                     <p>Slate helps you see how 
