--- a/public/main.css
+++ b/public/main.css
@@ -115,6 +115,7 @@ input {
     position: fixed;
     left: 0;
     right: 0;
+    backdrop-filter: blur(10px);
 }
 
 
@@ -177,15 +178,16 @@ nav figure {
 }
 
 .feat__card {
-    width: 344px;
+    width: 300px;
+    text-align: center;
     padding: 2rem;
     gap: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid var(--neutral2);
+    border: 1px solid gainsboro;
     border-radius: 10px;
-    box-shadow: #737373;
+    box-shadow: 5px 5px 30px gainsboro;
 }
 
 .feat__card figure {
