completed another section

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -81,6 +81,20 @@
             </div>
             
         </section>
+
+
+        <section class="container">
+            <div>
+                <h4 class="primary-color">UI KIT</h4>
+                <h2 class="secondary-color">Headings, body and other 
+                    common text elements</h2>
+                <p class="neutral2">Most calendars are designed for teams. Slate is designed for freelancers</p>
+            </div>
+
+            <figure>
+                <img src="/MacbookPro.png" alt="">
+            </figure>
+        </section>
     </main>
 </body>
 </html>
