--- a/public/main.css
+++ b/public/main.css
@@ -200,5 +200,7 @@ nav figure {
     .container {
         grid-auto-flow: column;
         grid-auto-columns: 1fr;
+        align-items: center;
+        gap: 1rem;
     }
 }
