--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -95,6 +95,24 @@
                 <img src="/MacbookPro.png" alt="">
             </figure>
         </section>
+
+
+        
+        <section class="container">
+            <figure>
+                <img src="/screencontent2.png" alt="">
+            </figure>
+            
+            <div>
+                <h4 class="primary-color">COMPONENTS</h4>
+                <h2 class="secondary-color">Toggle element based on 
+                    the Card</h2>
+                <p class="neutral2">Most calendars are designed for teams. 
+                    Slate is designed for freelancers</p>
+            </div>
+
+        </section>
+
     </main>
 </body>
 </html>
