finished anthother section

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -113,6 +113,19 @@
 
         </section>
 
+
+        <section class="container">
+            <div>
+                <h4 class="primary-color">CODE</h4>
+                <h2 class="secondary-color">Used for adding notices</h2>
+                <p class="neutral2">Most calendars are designed for teams. Slate is designed for freelancers</p>
+            </div>
+
+            <figure>
+                <img src="/MacbookPro.png" alt="">
+            </figure>
+        </section>
+
     </main>
 </body>
 </html>
