--- a/public/main.css
+++ b/public/main.css
@@ -34,6 +34,7 @@ button, textarea, input {
 
     --primary-color: #2091F9;
     --secondary-color: #252B42;
+    --secondary-color2: #E77C40;
     --neutral1: #fff;
     --neutral2: #737373;
 }
@@ -43,7 +44,7 @@ button, textarea, input {
     width: min(1400px, 90%);
     display: grid;
     margin-inline: auto;
-    padding: 6rem 4rem;
+    padding: 10rem 4rem;
 }
 
 h1 {
@@ -74,6 +75,9 @@ h4 {
     color: var(--secondary-color);
 }
 
+.secondary-color2 {
+    color: var(--secondary-color2);
+}
 .neutral1 {
     color: var(--neutral1);
 }
@@ -90,6 +94,29 @@ h4 {
     border-radius: 10px;
     color: var(--primary-color);
 }
+
+.secondary-button {
+    width: 236px;
+    padding: 1rem 1.5rem;
+    border: none;
+    border-radius: 10px;
+    color: var(--neutral1);
+    background-color: var(--primary-color);
+}
+
+.sub {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.sub__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+} 
 
 input {
     padding: 1rem 1.5rem;
