--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -126,6 +126,28 @@
             </figure>
         </section>
 
+
+
+        <section class="container">
+            <div class="sub__section">
+
+                <div class="sub">
+                    <h3 class="secondary-color2">At your fingertips</h3>
+                    <h2 class="secondary-color">Newsletter </h2>
+                </div>
+
+               <div class="sub">
+                <h3 class="secondary-color">Subscribe to our Newsletter</h3>
+                <p class="secondary-color">Available exclusivery on Figmaland</p>
+
+                <input type="email" name="email" id="" placeholder="Your email">
+                <button class="secondary-button">Subscribe</button>
+               </div>
+
+
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
