--- a/public/main.css
+++ b/public/main.css
@@ -104,6 +104,19 @@ h4 {
     background-color: var(--primary-color);
 }
 
+.secondary-button2 {
+    width: 236px;
+    padding: 1rem 1.5rem;
+    border: 1px solid var(--neutral1);
+    border-radius: 10px;
+    color: var(--neutral1);
+    background-color: transparent;
+}
+
+.bg-color {
+    background-color: var(--secondary-color);
+}
+
 .sub {
     display: flex;
     flex-direction: column;
