--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -148,6 +148,21 @@
             </div>
         </section>
 
+
+        <section class="container bg-color">
+
+            <div class="sub">
+                <h2>A modular UI Kit</h2>
+
+                <h4>Most calendars are designed for teams. 
+                    Slate is designed for freelancers</h4>
+
+                    <button class="secondary-button">Buy now</button>
+                    <button class="secondary-button2">Try for free</button>
+            </div>
+
+        </section>
+
     </main>
 </body>
 </html>
