--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -152,17 +152,22 @@
         <section class="container bg-color">
 
             <div class="sub">
-                <h2>A modular UI Kit</h2>
+                <h2 class="neutral1">A modular UI Kit</h2>
 
-                <h4>Most calendars are designed for teams. 
+                <h4 class="neutral1">Most calendars are designed for teams. 
                     Slate is designed for freelancers</h4>
 
-                    <button class="secondary-button">Buy now</button>
+                    <div>
+                        <button class="secondary-button">Buy now</button>
                     <button class="secondary-button2">Try for free</button>
+                    </div>
             </div>
 
         </section>
 
     </main>
+
+
+<%- include("includes/footer") %>
 </body>
 </html>
