--- a/public/main.css
+++ b/public/main.css
@@ -27,10 +27,10 @@ button, textarea, input {
 :root {
     --ff: 'Montserrat', sans-serif;
 
-    --fs-primary-heading: clamp(4rem, 5vw, 5rem);
-    --fs-secondary-heading: clamp(3rem, 4vw, 4rem);
-    --fs-paragraph: clamp(2rem, 2vw, 2rem);
-    --fs-paragraph2: clamp(.6rem, 1vw, 1rem);
+    --fs-primary-heading: clamp(3rem, 5vw, 5rem);
+    --fs-secondary-heading: clamp(1rem, 4vw, 4rem);
+    --fs-paragraph: clamp(1rem, 2vw, 2rem);
+    --fs-paragraph2: clamp(.4rem, 1vw, 1rem);
 
     --primary-color: #2091F9;
     --secondary-color: #252B42;
@@ -44,8 +44,11 @@ button, textarea, input {
     width: min(1400px, 90%);
     display: grid;
     margin-inline: auto;
-    padding: 10rem 4rem;
+    padding: 2rem;
+    gap: 2rem;
+    text-align: center;
 }
+
 
 h1 {
     font-size: var(--fs-primary-heading);
@@ -193,7 +196,7 @@ nav figure {
     background-repeat: no-repeat;
     background-size: cover;
     
-    padding-top: 14rem;
+    padding-top: 10rem;
     padding-bottom: 6rem;
     color: var(--neutral1);
     text-align: center;
@@ -260,10 +263,17 @@ footer {
 /* MEDIA QUERIES */
 
 @media (min-width: 70em) {
+
     .container {
         grid-auto-flow: column;
         grid-auto-columns: 1fr;
         align-items: center;
         gap: 1rem;
+        padding: 10rem 4rem;
+
+    }
+
+    .hero__section {
+        padding-top: 14rem;
     }
 }
