--- a/public/main.css
+++ b/public/main.css
@@ -187,7 +187,7 @@ nav figure {
 
 .nav__menu li a {
     text-decoration: none;
-    color: var(--neutral1);
+    color: black;
 
 }
 
@@ -270,6 +270,7 @@ footer {
         align-items: center;
         gap: 1rem;
         padding: 10rem 4rem;
+        text-align: left;
 
     }
 
