--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/main.css">
-    <title>Homepage</title>
+    <title><%= pageTitle %></title>
 </head>
 <body>
     <header>
@@ -13,13 +13,13 @@
             <nav>
 
                 <figure>
-                    <img src="/logo white.png" alt="">
+                    <img src="/logoblack.png" alt="">
                 </figure>
 
                 <div>
                     <ul class="nav__menu">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Product</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/product">Product</a></li>
                         <li><a href="">Pricing</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
