builidng second page

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,6 +1,21 @@
 <%- include("./includes/header") %>
 
 <main>
+
+    <section class="container">
+        <div class="sub">
+
+            <h3 class="neutral2">PRODUCT</h3>
+
+            <h1 class="secondary-color">A modular UI Kit for
+                <br> <span class="primary-color"> quick deployment| </span></h1>
+
+            <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
+                <br> for freelancers</h3>
+
+            <button class="secondary-button">Buy Now</button>
+        </div>
+    </section>
     
     <section class="container">
         <figure>
