--- a/public/main.css
+++ b/public/main.css
@@ -127,6 +127,7 @@ h4 {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    text-align: center;
 }
 
 .sub__section {
@@ -269,7 +270,7 @@ footer {
         grid-auto-columns: 1fr;
         align-items: center;
         gap: 1rem;
-        padding: 10rem 4rem;
+        padding: 12rem 4rem;
         text-align: left;
 
     }
