builidng second page

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -16,6 +16,57 @@
             <button class="secondary-button">Buy Now</button>
         </div>
     </section>
+
+    <section class="container">
+        <div class="card__sect">
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee.png" alt="">
+                    </figure>
+
+                    <h4>A modular UI kit</h4>
+                </div>
+
+                <p>Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee.png" alt="">
+                    </figure>
+
+                    <h4>A modular UI kit</h4>
+                </div>
+
+                <p>Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee.png" alt="">
+                    </figure>
+
+                    <h4>A modular UI kit</h4>
+                </div>
+
+                <p>Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+
+
+        </div>
+    </section>
     
     <section class="container">
         <figure>
