--- a/public/main.css
+++ b/public/main.css
@@ -240,6 +240,33 @@ nav figure {
     width: 20%;
 }
 
+.icons {
+    width: 40px;
+    padding: 10px;
+    background-color: var(--secondary-color2);
+    border-radius: 50px;
+}
+
+
+
+.fit {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.card {
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card__sect {
+    display: flex;
+    justify-content: center;
+}
+
 .socials {
     display: flex;
     justify-content: center;
