builidng second page

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -26,10 +26,10 @@
                         <img src="/Vectordee.png" alt="">
                     </figure>
 
-                    <h4>A modular UI kit</h4>
+                    <h4 class="secondary-color">A modular UI kit</h4>
                 </div>
 
-                <p>Slate helps you see how many 
+                <p class="neutral2">Slate helps you see how many 
                     more days you need to work to 
                     reach your financial goal. </p>
             </div>
@@ -40,10 +40,10 @@
                         <img src="/Vectordee.png" alt="">
                     </figure>
 
-                    <h4>A modular UI kit</h4>
+                    <h4 class="secondary-color">A modular UI kit</h4>
                 </div>
 
-                <p>Slate helps you see how many 
+                <p class="neutral2">Slate helps you see how many 
                     more days you need to work to 
                     reach your financial goal. </p>
             </div>
@@ -55,10 +55,10 @@
                         <img src="/Vectordee.png" alt="">
                     </figure>
 
-                    <h4>A modular UI kit</h4>
+                    <h4 class="secondary-color">A modular UI kit</h4>
                 </div>
 
-                <p>Slate helps you see how many 
+                <p class="neutral2">Slate helps you see how many 
                     more days you need to work to 
                     reach your financial goal. </p>
             </div>
