--- a/views/product.ejs
+++ b/views/product.ejs
@@ -40,7 +40,7 @@
                         <img src="/Vectordee.png" alt="">
                     </figure>
 
-                    <h4 class="secondary-color">A modular UI kit</h4>
+                    <h4 class="secondary-color">Handy plugins </h4>
                 </div>
 
                 <p class="neutral2">Slate helps you see how many 
@@ -55,7 +55,7 @@
                         <img src="/Vectordee.png" alt="">
                     </figure>
 
-                    <h4 class="secondary-color">A modular UI kit</h4>
+                    <h4 class="secondary-color">Speedy build tools</h4>
                 </div>
 
                 <p class="neutral2">Slate helps you see how many 
