finished second page

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -37,7 +37,7 @@
             <div class="card">
                 <div class="fit">
                     <figure class="icons">
-                        <img src="/Vectordee.png" alt="">
+                        <img src="/Vectordee-1.png" alt="">
                     </figure>
 
                     <h4 class="secondary-color">Handy plugins </h4>
@@ -52,7 +52,7 @@
             <div class="card">
                 <div class="fit">
                     <figure class="icons">
-                        <img src="/Vectordee.png" alt="">
+                        <img src="/Vectordee-2.png" alt="">
                     </figure>
 
                     <h4 class="secondary-color">Speedy build tools</h4>
