define page 3 route

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -13,7 +13,7 @@
             <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
                 <br> for freelancers</h3>
 
-            <button class="secondary-button">Buy Now</button>
+            <button type="submit" href="/product-list" class="secondary-button">Buy Now</button>
         </div>
     </section>
 
