define page 3 route

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -18,6 +18,17 @@
     </section>
 
 
+    <section class="container">
+
+        <h3>Featured Plugins</h3>
+
+        <a href=""> Learn More</a>
+    </section>
+
+
+    <section>
+
+    </section>
 
 
     <section class="container bg-color">
