--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -26,7 +26,66 @@
     </section>
 
 
-    <section>
+    <section class="product__listing">
+
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+
+        
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+        
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
 
     </section>
 
