define page 3 route

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -52,7 +52,7 @@
         <div class="product__card">
 
             <figure>
-                <img src="/Groupsub.png" alt="">
+                <img src="/Groupsub-1.png" alt="">
             </figure>
 
             <div class="product__content">
@@ -72,7 +72,7 @@
         <div class="product__card">
 
             <figure>
-                <img src="/Groupsub.png" alt="">
+                <img src="/Groupsub-2.png" alt="">
             </figure>
 
             <div class="product__content">
