--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -147,6 +147,14 @@
     </section>
 
 
+    <section class="container">
+
+        <h3>Featured Plugins</h3>
+
+        <a href=""> Learn More</a>
+    </section>
+
+
     <section class="container bg-color">
 
         <div class="sub">
@@ -162,6 +170,13 @@
         </div>
 
     </section>
+
+
+
+
+
+
+
 
 </main>
 
