--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -155,6 +155,127 @@
     </section>
 
 
+    <section class="product__listing">
+
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+
+        
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub-1.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+        
+        <div class="product__card">
+
+            <figure>
+                <img src="/plugin-vectarysub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+        <div class="product__card">
+
+            <figure>
+                <img src="/chart_newsub.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub-2.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+
+        </div>
+
+
+
+        <div class="product__card">
+
+            <figure>
+                <img src="/Groupsub-3.png" alt="">
+            </figure>
+
+            <div class="product__content">
+                <h4>Full Time</h4>
+
+                <p>Most calendars are designed 
+                    for teams. Slate is designed 
+                    for freelancers</p>
+
+                    <button class="secondary-button">Try for free</button>
+            </div>
+        </div>
+
+    </section>
+
+
     <section class="container bg-color">
 
         <div class="sub">
