define 4th route

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -251,7 +251,7 @@
                     <button class="secondary-button">Buy now</button>
                 <button class="secondary-button2">Try for free</button>
                 </div>
-        </div>
+        </div>s
 
     </section>
 
