--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -20,7 +20,8 @@
                     <ul class="nav__menu">
                         <li><a href="/">Home</a></li>
                         <li><a href="/product">Product</a></li>
-                        <li><a href="">Pricing</a></li>
+                        <li><a href="/product/product-list">Product Listing</a></li>
+                        <li><a href="/pricing">Pricing</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
 
