--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -5,7 +5,7 @@
     <section class="container">
         <div class="sub">
 
-            <h3 class="neutral2">PRODUCT</h3>
+            <h3 class="neutral2">PRICING</h3>
 
             <h1 class="secondary-color">A modular UI Kit for
                 <br> <span class="primary-color"> quick deployment| </span></h1>
