define 4th route

--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -7,8 +7,7 @@
 
             <h3 class="neutral2">PRICING</h3>
 
-            <h1 class="secondary-color">A modular UI Kit for
-                <br> <span class="primary-color"> quick deployment| </span></h1>
+            <h1 class="secondary-color">Pricing that <span class="primary-color"> scales you </span></h1>
 
             <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
                 <br> for freelancers</h3>
