--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -16,9 +16,15 @@
         </div>
     </section>
 
-    
+    <section>
+        <div>
+            <h4>Monthly</h4>
+        </div>
 
-<!-- ADDESD -->
+        <div>
+            <h4>Yearly ( save 20%)</h4>
+        </div>
+    </section>
 
 
     <section class="container bg-color">
