--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -16,7 +16,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="pr">
         <div>
             <h4>Monthly</h4>
         </div>
