--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -17,7 +17,7 @@
     </section>
 
     <section class="pr">
-        <div>
+        <div class="pr-db">
             <h4>Monthly</h4>
         </div>
 
@@ -27,7 +27,7 @@
     </section>
 
 
-    
+
 
     <!-- shshhsh -->
 
