--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -21,7 +21,7 @@
             <h4>Monthly</h4>
         </div>
 
-        <div>
+        <div class="pr-db2">
             <h4>Yearly ( save 20%)</h4>
         </div>
     </section>
