--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -27,7 +27,42 @@
     </section>
 
 
+    <section class="price">
 
+        <div class="price-card">
+            <div>
+                <h4>FREE</h4>
+                <p>Organize across all 
+                    apps by hand</p>
+            </div>
+
+            <div>
+                <h2>0</h2>
+
+                <div>
+                    <h4>$</h4>
+                    <h4>Per Month</h4>
+                </div>
+            </div>
+
+
+            <div>
+                <div>
+                    <figure>
+                        <img src="" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
+
+                <button>Order Now</button>
+            </div>
+        </div>
+
+    </section>
 
 
     <section class="container bg-color">
