define 4th route

--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -36,7 +36,7 @@
                     apps by hand</p>
             </div>
 
-            <div>
+            <div class="amount">
                 <h2>0</h2>
 
                 <div>
@@ -49,7 +49,7 @@
             <div>
                 <div>
                     <figure>
-                        <img src="" alt="">
+                        <img src="/green.png" alt="">
                     </figure>
     
                     <p>Unlimited product updates
