--- a/public/main.css
+++ b/public/main.css
@@ -326,6 +326,16 @@ nav figure {
     gap: 3rem;
 }
 
+.price-card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    text-align: center;
+}
+
+.price
+
 
 footer figure {
     width: 10%;
