--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -47,7 +47,7 @@
 
 
             <div>
-                <div>
+                <div class="price-features">
                     <figure>
                         <img src="/green.png" alt="">
                     </figure>
@@ -58,7 +58,7 @@
 
 
 
-                <button>Order Now</button>
+                <button class="secondary-button">Order Now</button>
             </div>
         </div>
 
