--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -46,7 +46,44 @@
             </div>
 
 
-            <div>
+            <div >
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
                 <div class="price-features">
                     <figure>
                         <img src="/green.png" alt="">
