--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -37,11 +37,11 @@
             </div>
 
             <div class="amount">
-                <h2>0</h2>
+                <h2 class="primary-color">0</h2>
 
                 <div>
-                    <h4>$</h4>
-                    <h4>Per Month</h4>
+                    <h4 class="primary-color">$</h4>
+                    <h4 class="primary-color">Per Month</h4>
                 </div>
             </div>
 
