--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -77,6 +77,50 @@
 
                 <div class="price-features">
                     <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
+
+                <button class="secondary-button">Order Now</button>
+            </div>
+        </div>
+
+
+
+        <div class="price-card2">
+            <div>
+                <h4>FREE</h4>
+                <p>Organize across all 
+                    apps by hand</p>
+            </div>
+
+            <div class="amount">
+                <h2 class="primary-color">0</h2>
+
+                <div>
+                    <h4 class="primary-color">$</h4>
+                    <h4 class="primary-color">Per Month</h4>
+                </div>
+            </div>
+
+
+            <div >
+                <div class="price-features">
+                    <figure>
                         <img src="/green.png" alt="">
                     </figure>
     
@@ -94,12 +138,115 @@
                 </div>
 
 
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
 
                 <button class="secondary-button">Order Now</button>
             </div>
         </div>
 
+
+        <div class="price-card">
+            <div>
+                <h4>FREE</h4>
+                <p>Organize across all 
+                    apps by hand</p>
+            </div>
+
+            <div class="amount">
+                <h2 class="primary-color">0</h2>
+
+                <div>
+                    <h4 class="primary-color">$</h4>
+                    <h4 class="primary-color">Per Month</h4>
+                </div>
+            </div>
+
+
+            <div >
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/green.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+                <div class="price-features">
+                    <figure>
+                        <img src="/ash.png" alt="">
+                    </figure>
+    
+                    <p>Unlimited product updates
+                    </p>
+                </div>
+
+
+
+                <button class="secondary-button">Order Now</button>
+            </div>
+        </div>
+
+
+
     </section>
+
+    
 
 
     <section class="container bg-color">
