--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -121,7 +121,7 @@
             <div >
                 <div class="price-features">
                     <figure>
-                        <img src="/green.png" alt="">
+                        <img src="/white.png" alt="">
                     </figure>
     
                     <p>Unlimited product updates
