--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -130,7 +130,7 @@
 
                 <div class="price-features">
                     <figure>
-                        <img src="/green.png" alt="">
+                        <img src="/white.png" alt="">
                     </figure>
     
                     <p>Unlimited product updates
@@ -140,7 +140,7 @@
 
                 <div class="price-features">
                     <figure>
-                        <img src="/green.png" alt="">
+                        <img src="/white.png" alt="">
                     </figure>
     
                     <p>Unlimited product updates
@@ -149,7 +149,7 @@
 
                 <div class="price-features">
                     <figure>
-                        <img src="/ash.png" alt="">
+                        <img src="/white.png" alt="">
                     </figure>
     
                     <p>Unlimited product updates
