define 4th route

--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -61,8 +61,7 @@
                         <img src="/green.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Unlimited Shares</p>
                 </div>
 
 
@@ -71,8 +70,7 @@
                         <img src="/green.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Every feature in Figmaland</p>
                 </div>
 
                 <div class="price-features">
@@ -80,8 +78,7 @@
                         <img src="/ash.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>1GB  Cloud storage</p>
                 </div>
 
                 <div class="price-features">
@@ -89,8 +86,7 @@
                         <img src="/ash.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Email and community support</p>
                 </div>
 
 
@@ -133,8 +129,7 @@
                         <img src="/white.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Unlimited Shares</p>
                 </div>
 
 
